tests/neg/operators/inc-00.ts

/*@ inc :: ({number|true}) => void */
function inc(x){
  var y = x + 1;
  assert(y > 0);
}

